Alterado campos do menu e corrigido erros de escrita

--- a/src/app/demo/components/auth/access/access.component.html
+++ b/src/app/demo/components/auth/access/access.component.html
@@ -7,7 +7,7 @@
                     <div class="flex justify-content-center align-items-center bg-orange-500 border-circle" style="width:3.2rem; height:3.2rem;">
                         <i class="text-50 pi pi-fw pi-lock text-2xl"></i>
                     </div>
-                    <h1 class="text-900 font-bold text-4xl lg:text-5xl mb-2">Accesso Negado</h1>
+                    <h1 class="text-900 font-bold text-4xl lg:text-5xl mb-2">Acesso Negado</h1>
                     <span class="text-600 mb-5">Você não tem as permissões necessárias. Favor, contate um administrador.</span>
                     <img src="assets/demo/images/access/asset-access.svg" alt="Accesso negado" class="mb-5" width="80%">
                     <button pButton pRipple icon="pi pi-arrow-left" label="Voltar" class="p-button-text" [routerLink]="['/']"></button>
