--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -10,30 +10,30 @@
                     <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
                 </div>
             </div>
-            <span class="text-green-500 font-medium">24 new </span>
-            <span class="text-500">since last visit</span>
+            <span class="text-green-500 font-medium">+24 </span>
+            <span class="text-500">desde a última visita</span>
         </div>
     </div>
     <div class="col-12 lg:col-6 xl:col-3">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Revenue</span>
-                    <div class="text-900 font-medium text-xl">$2.100</div>
+                    <span class="block text-500 font-medium mb-3">Rendimento</span>
+                    <div class="text-900 font-medium text-xl">R$2.100,00</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-orange-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
                     <i class="pi pi-map-marker text-orange-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">%52+ </span>
-            <span class="text-500">since last week</span>
+            <span class="text-500">desde a última semana</span>
         </div>
     </div>
     <div class="col-12 lg:col-6 xl:col-3">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Customers</span>
+                    <span class="block text-500 font-medium mb-3">Clientes</span>
                     <div class="text-900 font-medium text-xl">28441</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-cyan-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
@@ -41,35 +41,35 @@
                 </div>
             </div>
             <span class="text-green-500 font-medium">520  </span>
-            <span class="text-500">newly registered</span>
+            <span class="text-500">novos registrados</span>
         </div>
     </div>
     <div class="col-12 lg:col-6 xl:col-3">
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3">Comments</span>
-                    <div class="text-900 font-medium text-xl">152 Unread</div>
+                    <span class="block text-500 font-medium mb-3">Comentários</span>
+                    <div class="text-900 font-medium text-xl">152 Não lidos</div>
                 </div>
                 <div class="flex align-items-center justify-content-center bg-purple-100 border-round" [ngStyle]="{width: '2.5rem', height: '2.5rem'}">
                     <i class="pi pi-comment text-purple-500 text-xl"></i>
                 </div>
             </div>
             <span class="text-green-500 font-medium">85 </span>
-            <span class="text-500">responded</span>
+            <span class="text-500">respondidos</span>
         </div>
     </div>
 
     <div class="col-12 xl:col-6">
         <div class="card">
-            <h5>Recent Sales</h5>
+            <h5>Vendas recentes</h5>
             <p-table [value]="products" [paginator]="true" [rows]="5" responsiveLayout="scroll">
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>Image</th>
-                        <th pSortableColumn="name">Name <p-sortIcon field="name"></p-sortIcon></th>
-                        <th pSortableColumn="price">Price <p-sortIcon field="price"></p-sortIcon></th>
-                        <th>View</th>
+                        <th>Imagem</th>
+                        <th pSortableColumn="name">Nome <p-sortIcon field="name"></p-sortIcon></th>
+                        <th pSortableColumn="price">Preço <p-sortIcon field="price"></p-sortIcon></th>
+                        <th>Ver</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-product>
