--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -16,15 +16,15 @@
     <div #topbarmenu class="layout-topbar-menu" [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}">
         <button class="p-link layout-topbar-button">
             <i class="pi pi-calendar"></i>
-            <span>Calendar</span>
+            <span>Calendario</span>
         </button>
         <button class="p-link layout-topbar-button">
             <i class="pi pi-user"></i>
-            <span>Profile</span>
+            <span>Perfil</span>
         </button>
         <button class="p-link layout-topbar-button" (click)="layoutService.showConfigSidebar()">
             <i class="pi pi-cog"></i>
-            <span>Settings</span>
+            <span>Configurações</span>
         </button>
     </div>
 </div>
