ALterado estrutura do projeto

--- a/src/app/config/app.config.component.html
+++ b/src/app/config/app.config.component.html
@@ -25,10 +25,10 @@
     <h5>Estilo da página</h5>
     <div class="grid mt-2 border-round p-2 w-12rem gap-7">
         <button class="p-link ml-2 w-2rem h-2rem" (click)="changeTheme('md-light-deeppurple', 'light')" title="Modo Claro">
-            <img src="assets/layout/images/themes/md-light-deeppurple.svg" class="w-2rem h-2rem" alt="Modo Claro">
+            <img src="../../assets/layout/images/themes/md-light-deeppurple.svg" class="w-2rem h-2rem" alt="Modo Claro">
         </button>
         <button class="p-link w-2rem h-2rem" (click)="changeTheme('md-dark-deeppurple', 'dark')" title="Modo Escuro">
-            <img src="assets/layout/images/themes/md-dark-deeppurple.svg" class="w-2rem h-2rem" alt="Modo Escuro">
+            <img src="../../assets/layout/images/themes/md-dark-deeppurple.svg" class="w-2rem h-2rem" alt="Modo Escuro">
         </button>
     </div>
 </p-sidebar>
