--- a/src/app/layout/landing/landing.component.html
+++ b/src/app/layout/landing/landing.component.html
@@ -169,7 +169,7 @@
                         <h3 class="text-gray-900 mb-2">Joséphine Miller</h3>
                         <span class="text-gray-600 text-2xl">Peak Interactive</span>
                         <p class="text-gray-900 sm:line-height-2 md:line-height-4 text-2xl mt-4" style="max-width:800px;">“Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.”</p>
-                        <img src="assets/demo/images/landing/peak-logo.svg" class="mt-4" alt="Company logo">
+                        <img src="../../../assets/demo/images/landing/peak-logo.svg" class="mt-4" alt="Company logo">
 
                     </div>
                 </div>
@@ -221,7 +221,7 @@
                 <div class="col-12 lg:col-4 p-0 md:p-3">
                     <div class="p-3 flex flex-column border-200 pricing-card cursor-pointer border-2 hover:border-primary transition-duration-300 transition-all" style="border-radius:10px">
                         <h3 class="text-900 text-center my-5">Free</h3>
-                        <img src="assets/demo/images/landing/free.svg" class="w-10 h-10 mx-auto" alt="free">
+                        <img src="../../../assets/demo/images/landing/free.svg" class="w-10 h-10 mx-auto" alt="free">
                         <div class="my-5 text-center">
                             <span class="text-5xl font-bold mr-2 text-900">$0</span>
                             <span class="text-600">per month</span>
@@ -252,7 +252,7 @@
                 <div class="col-12 lg:col-4 p-0 md:p-3 mt-4 md:mt-0">
                     <div class="p-3 flex flex-column border-200 pricing-card cursor-pointer border-2 hover:border-primary transition-duration-300 transition-all" style="border-radius:10px">
                         <h3 class="text-900 text-center my-5">Startup</h3>
-                        <img src="assets/demo/images/landing/startup.svg" class="w-10 h-10 mx-auto" alt="startup">
+                        <img src="../../../assets/demo/images/landing/startup.svg" class="w-10 h-10 mx-auto" alt="startup">
                         <div class="my-5 text-center">
                             <span class="text-5xl font-bold mr-2 text-900">$1</span>
                             <span class="text-600">per month</span>
@@ -283,7 +283,7 @@
                 <div class="col-12 lg:col-4 p-0 md:p-3 mt-4 md:mt-0">
                     <div class="p-3 flex flex-column border-200 pricing-card cursor-pointer border-2 hover:border-primary transition-duration-300 transition-all" style="border-radius:10px">
                         <h3 class="text-900 text-center my-5">Enterprise</h3>
-                        <img src="assets/demo/images/landing/enterprise.svg" class="w-10 h-10 mx-auto" alt="enterprise">
+                        <img src="../../../assets/demo/images/landing/enterprise.svg" class="w-10 h-10 mx-auto" alt="enterprise">
                         <div class="my-5 text-center">
                             <span class="text-5xl font-bold mr-2 text-900">$999</span>
                             <span class="text-600">per month</span>
@@ -343,7 +343,7 @@
                         <div class="col-12 md:col-3 mt-4 md:mt-0">
                             <h4 class="font-medium text-2xl line-height-3 mb-3 text-900">Community</h4>
                             <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Discord</a>
-                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Events<img src="assets/demo/images/landing/new-badge.svg" class="ml-2"/></a>
+                            <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">Events<img src="../../../assets/demo/images/landing/new-badge.svg" class="ml-2"/></a>
                             <a class="line-height-3 text-xl block cursor-pointer mb-2 text-700">FAQ</a>
                             <a class="line-height-3 text-xl block cursor-pointer text-700">Blog</a>
                         </div>
