--- a/src/app/layout/customer/customer.component.html
+++ b/src/app/layout/customer/customer.component.html
@@ -1,7 +1,7 @@
 <p-toast/>
 <p-confirmDialog/>
 <spinner [show]="spinner"></spinner>
-<div class="p-datatable-wrapper p-m-3 shadow-3">
+<div class="p-datatable-wrapper p-m-3 shadow-3 w-100 h-100">
     <p-table [value]="customers"
              [paginator]="true"
              [scrollable]="true"
@@ -46,216 +46,244 @@
                 <td class="text-center" [ngClass]="{
                       'text-green-300 font-semibold': customer.customerStatus === 'NEW',
                       'text-red-300': customer.customerStatus === 'LOST'}">
-                    <p-tag [severity]="customer.customerStatus === 'NEW' ? 'success' : customer.customerStatus === 'LOST' ? 'danger' : 'primary'"
+                    <p-tag
+                        [severity]="customer.customerStatus === 'NEW' ? 'success' : customer.customerStatus === 'LOST' ? 'danger' : 'primary'"
                         value="{{ customer.customerStatus }}"/>
                 </td>
             </tr>
         </ng-template>
     </p-table>
 
-    <p-dialog header="Novo Cliente"
-              [(visible)]="customerDialog"
-              [modal]="true"
-              [style]="{width: '55vw'}"
-              [breakpoints]="{ '1379px': '75vw', '767px': '90vw' }"
-              [contentStyle]="{'overflow': 'visible'}"
-              [maximizable]="true"
-              [draggable]="false">
-        <div class="grid p-fluid p-2">
-            <div class="col-12 lg:col-4">
-                <div class="p-field">
-                    <label for="cpfCnpj">CPF/CNPJ</label>
-                    <input pInputText
-                           id="cpfCnpj"
-                           [(ngModel)]="customer.cpfCnpj"
-                           (input)="checkCpfCnpjValue($event)"
-                           maxlength="18"
-                           (blur)="customer.cpfCnpj = formatCpfCnpj(customer.cpfCnpj)"
-                           required
-                           placeholder="Digite o CPF ou CNPJ"/>
+    <form #customerForm="ngForm" name="customerForm">
+        <p-dialog header="Novo Cliente"
+                  [(visible)]="customerDialog"
+                  [modal]="true"
+                  [style]="{width: '55vw'}"
+                  [breakpoints]="{ '1379px': '75vw', '767px': '90vw' }"
+                  [maximizable]="true"
+                  [draggable]="false">
+            <div class="grid p-fluid p-2">
+                <div class="col-12 lg:col-4">
+                    <div class="p-field">
+                        <label for="cpfCnpj">CPF/CNPJ</label>
+                        <input pInputText
+                               name="cpfCnpj"
+                               id="cpfCnpj"
+                               [(ngModel)]="customer.cpfCnpj"
+                               (input)="checkCpfCnpjValue($event)"
+                               maxlength="18"
+                               (blur)="customer.cpfCnpj = formatCpfCnpj(customer.cpfCnpj)"
+                               required
+                               placeholder="Digite o CPF ou CNPJ"
+                               #cpfCnpj="ngModel"
+                               [ngClass]="{'ng-invalid': cpfCnpj.invalid && cpfCnpj.touched}"/>
+                        <p-messages severity="error" class="text-red-300 ml-2" *ngIf="cpfCnpj.invalid && cpfCnpj.touched" [textContent]="'CPF/CNPJ é obrigatório'"></p-messages>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-8">
-                <div class="p-field">
-                    <label for="name">Nome</label>
-                    <input pInputText
-                           id="name"
-                           [(ngModel)]="customer.name"
-                           required
-                           placeholder="Digite o nome"/>
+                <div class="col-12 lg:col-8">
+                    <div class="p-field">
+                        <label for="name">Nome</label>
+                        <input pInputText
+                               name="name"
+                               id="name"
+                               [(ngModel)]="customer.name"
+                               required
+                               placeholder="Digite o nome"/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-8">
-                <div class="p-field">
-                    <label for="cpfCnpj">Nome Fantasia</label>
-                    <input pInputText
-                           id="tradeName"
-                           [(ngModel)]="customer.tradeName"
-                           placeholder="Digite o nome fantasia (Somente PJ)"/>
+                <div class="col-12 lg:col-8">
+                    <div class="p-field">
+                        <label for="cpfCnpj">Nome Fantasia</label>
+                        <input pInputText
+                               name="tradeName"
+                               id="tradeName"
+                               [(ngModel)]="customer.tradeName"
+                               placeholder="Digite o nome fantasia (Somente PJ)"/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-4">
-                <div class="p-field">
-                    <label for="customerStatus">Status</label>
-                    <p-dropdown
-                        id="customerStatus"
-                        [options]="customerStatusOptions"
-                        [(ngModel)]="customer.customerStatus"
-                        required/>
+                <div class="col-12 lg:col-4">
+                    <div class="p-field">
+                        <label for="customerStatus">Status</label>
+                        <p-inputGroup id="customerStatus">
+                            <input type="text" pInputText [value]="customer.customerStatus" readonly/>
+                            <p-inputGroupAddon>
+                                <i class="pi pi-info-circle no-wrap"
+                                   pTooltip="Alteração permitida somente no funil de vendas."
+                                   tooltipPosition="right"></i>
+                            </p-inputGroupAddon>
+                        </p-inputGroup>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-8">
-                <div class="p-field">
-                    <label for="email">Email</label>
-                    <input pInputText
-                           id="email"
-                           [(ngModel)]="customer.email"
-                           required
-                           placeholder="Digite o email"/>
+                <div class="col-12 lg:col-8">
+                    <div class="p-field">
+                        <label for="email">Email</label>
+                        <input pInputText
+                               name="email"
+                               id="email"
+                               [(ngModel)]="customer.email"
+                               required
+                               placeholder="Digite o email"/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-4">
-                <div class="p-field">
-                    <label for="birthFoundationDate">Nascimento/Fundação</label>
-                    <p-calendar
-                        id="birthFoundationDate"
-                        [(ngModel)]="customer.birthFoundationDate"
-                        [showIcon]="true"
-                        [iconDisplay]="'input'"
-                        dateFormat="dd/mm/yy"
-                        required
-                        placeholder="Selecione a data"
-                    />
+                <div class="col-12 lg:col-4">
+                    <div class="p-field">
+                        <label for="birthFoundationDate">Nascimento/Fundação</label>
+                        <p-calendar
+                            name="birthFoundationDate"
+                            id="birthFoundationDate"
+                            [(ngModel)]="customer.birthFoundationDate"
+                            [showIcon]="true"
+                            [iconDisplay]="'input'"
+                            [baseZIndex]="1000"
+                            [appendTo]="'body'"
+                            dateFormat="dd/mm/yy"
+                            required
+                            placeholder="Selecione a data"
+                        />
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-3">
-                <div class="p-field">
-                    <label for="email">Inscrição Estadual</label>
-                    <p-inputMask
-                        id="stateRegistration"
-                        [(ngModel)]="customer.stateRegistration"
-                        mask="999.999.999.999"/>
+                <div class="col-12 lg:col-3">
+                    <div class="p-field">
+                        <label for="email">Inscrição Estadual</label>
+                        <p-inputMask
+                            name="stateRegistration"
+                            id="stateRegistration"
+                            [(ngModel)]="customer.stateRegistration"
+                            mask="999.999.999.999"/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-9">
-                <div class="p-field">
-                    <label for="email">Telefones</label>
-                    <p-chips
-                        pTooltip="Aperte ENTER para inserir (max. 2)"
-                        tooltipEvent="focus"
-                        [max]="2"
-                        [(ngModel)]="customer.phoneNumbers"
-                        (onAdd)="onPhoneAdd($event)"
-                        required
-                        tooltipPosition="right">
-                        <ng-template let-item pTemplate="item">
-                            {{ item | phoneFormat }}
-                        </ng-template>
-                    </p-chips>
+                <div class="col-12 lg:col-9">
+                    <div class="p-field">
+                        <label for="email">Telefones</label>
+                        <p-chips
+                            name="phoneNumbers"
+                            pTooltip="Aperte ENTER para inserir (max. 2)"
+                            tooltipEvent="focus"
+                            [max]="2"
+                            [(ngModel)]="customer.phoneNumbers"
+                            (onAdd)="onPhoneAdd($event)"
+                            required
+                            tooltipPosition="right"
+                            tooltipStyleClass="nowrap">
+                            <ng-template let-item pTemplate="item">
+                                {{ item | phoneFormat }}
+                            </ng-template>
+                        </p-chips>
+                    </div>
                 </div>
-            </div>
-            <div class="col-12 lg:col-4">
-                <div class="p-field">
-                    <label for="postalCode">CEP</label>
-                    <p-inputMask
-                        id="postalCode"
-                        [(ngModel)]="customer.address.postalCode"
-                        mask="99999-999"
-                        placeholder="Digite o CEP"
-                        (onBlur)="searchPostalCode()"
-                        required/>
-                </div>
-            </div>
 
-            <div class="col-12 lg:col-8">
-                <div class="p-field">
-                    <label for="street">Logradouro</label>
-                    <input pInputText
-                           id="street"
-                           [(ngModel)]="customer.address.street"
-                           required
-                           placeholder="Digite o logradouro"/>
+                <div class="col-12 lg:col-4">
+                    <div class="p-field">
+                        <label for="postalCode">CEP</label>
+                        <p-inputMask
+                            name="postalCode"
+                            id="postalCode"
+                            [(ngModel)]="customer.address.postalCode"
+                            mask="99999-999"
+                            placeholder="Digite o CEP"
+                            (onBlur)="searchPostalCode()"
+                            required/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-2">
-                <div class="p-field">
-                    <label for="number">Número</label>
-                    <input pInputText
-                           id="number"
-                           [(ngModel)]="customer.address.number"
-                           required
-                           placeholder="Número"/>
+                <div class="col-12 lg:col-8">
+                    <div class="p-field">
+                        <label for="street">Logradouro</label>
+                        <input pInputText
+                               name="street"
+                               id="street"
+                               [(ngModel)]="customer.address.street"
+                               required
+                               placeholder="Digite o logradouro"/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-6">
-                <div class="p-field">
-                    <label for="complement">Complemento</label>
-                    <input pInputText
-                           id="complement"
-                           [(ngModel)]="customer.address.complement"
-                           placeholder="Complemento"/>
+                <div class="col-12 lg:col-2">
+                    <div class="p-field">
+                        <label for="number">Número</label>
+                        <input pInputText
+                               name="number"
+                               id="number"
+                               [(ngModel)]="customer.address.number"
+                               required
+                               placeholder="Número"/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-4">
-                <div class="p-field">
-                    <label for="neighborhood">Bairro</label>
-                    <input pInputText
-                           id="neighborhood"
-                           [(ngModel)]="customer.address.neighborhood"
-                           required
-                           placeholder="Digite o bairro"/>
+                <div class="col-12 lg:col-6">
+                    <div class="p-field">
+                        <label for="complement">Complemento</label>
+                        <input pInputText
+                               name="complement"
+                               id="complement"
+                               [(ngModel)]="customer.address.complement"
+                               placeholder="Complemento"/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-6">
-                <div class="p-field">
-                    <label for="city">Cidade</label>
-                    <input pInputText
-                           id="city"
-                           [(ngModel)]="customer.address.city"
-                           required
-                           placeholder="Digite a cidade"/>
+                <div class="col-12 lg:col-4">
+                    <div class="p-field">
+                        <label for="neighborhood">Bairro</label>
+                        <input pInputText
+                               name="neighborhood"
+                               id="neighborhood"
+                               [(ngModel)]="customer.address.neighborhood"
+                               required
+                               placeholder="Digite o bairro"/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-2">
-                <div class="p-field">
-                    <label for="state">Estado</label>
-                    <input pInputText
-                           id="state"
-                           [(ngModel)]="customer.address.state"
-                           maxlength="2"
-                           required
-                           placeholder="UF"/>
+                <div class="col-12 lg:col-6">
+                    <div class="p-field">
+                        <label for="city">Cidade</label>
+                        <input pInputText
+                               name="city"
+                               id="city"
+                               [(ngModel)]="customer.address.city"
+                               required
+                               placeholder="Digite a cidade"/>
+                    </div>
                 </div>
-            </div>
 
-            <div class="col-12 lg:col-4">
-                <div class="p-field">
-                    <label for="country">País</label>
-                    <input pInputText
-                           id="country"
-                           [(ngModel)]="customer.address.country"
-                           required
-                           placeholder="Digite o país"/>
+                <div class="col-12 lg:col-2">
+                    <div class="p-field">
+                        <label for="state">Estado</label>
+                        <input pInputText
+                               name="state"
+                               id="state"
+                               [(ngModel)]="customer.address.state"
+                               maxlength="2"
+                               required
+                               placeholder="UF"/>
+                    </div>
+                </div>
+
+                <div class="col-12 lg:col-4">
+                    <div class="p-field">
+                        <label for="country">País</label>
+                        <input pInputText
+                               name="country"
+                               id="country"
+                               [(ngModel)]="customer.address.country"
+                               required
+                               placeholder="Digite o país"/>
+                    </div>
                 </div>
             </div>
-        </div>
-        <p-footer>
-            <button pButton label="Cancelar" icon="pi pi-times" class="p-button-danger"
-                    (click)="customerDialog = false"></button>
-            <button pButton label="Salvar" icon="pi pi-check" class="p-button-success"
-                    (click)="saveCustomer()"></button>
-        </p-footer>
-    </p-dialog>
+            <p-footer>
+                <button pButton label="Cancelar" icon="pi pi-times" class="p-button-danger"
+                        (click)="customerDialog = false"></button>
+                <button pButton label="Salvar" icon="pi pi-check" class="p-button-success"
+                        (click)="saveCustomer()"
+                        [disabled]="customerForm.invalid"></button>
+            </p-footer>
+        </p-dialog>
+    </form>
 </div>
