--- a/src/app/layout/customer/customer.component.html
+++ b/src/app/layout/customer/customer.component.html
@@ -1,7 +1,7 @@
 <p-toast/>
 <p-confirmDialog/>
 <spinner [show]="spinner"></spinner>
-<div class="p-datatable-wrapper p-m-3 shadow-3 w-100 h-100">
+<div class="surface-card p-3 border-none border-round-xl shadow-3">
     <p-table [value]="customers"
              [paginator]="true"
              [scrollable]="true"
@@ -53,7 +53,7 @@
             </tr>
         </ng-template>
     </p-table>
-
+</div>
     <form #customerForm="ngForm" name="customerForm">
         <p-dialog header="Novo Cliente"
                   [(visible)]="customerDialog"
@@ -286,4 +286,3 @@
             </p-footer>
         </p-dialog>
     </form>
-</div>
