--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,7 @@ $gutter: 1rem;
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeflex/primeflex.scss";
 @import "../node_modules/primeicons/primeicons.css";
+
+* {
+    scrollbar-width: none;
+}
