--- a/src/app/layout/customer/customer.component.html
+++ b/src/app/layout/customer/customer.component.html
@@ -25,6 +25,7 @@
                 <th class="font-semibold">CPF/CNPJ</th>
                 <th class="font-semibold">Nome</th>
                 <th class="font-semibold">Email</th>
+                <th class="font-semibold text-center">Alterado Por</th>
                 <th class="font-semibold">Data Atualização</th>
                 <th class="font-semibold text-center">Status</th>
             </tr>
@@ -42,6 +43,10 @@
                 <td>{{ formatCpfCnpj(customer.cpfCnpj) }}</td>
                 <td>{{ customer.name }}</td>
                 <td>{{ customer.email }}</td>
+                <td class="text-center"><p-tag
+                    severity="warning"
+                    value="{{ customer.lastModifiedBy }}"/>
+                </td>
                 <td>{{ customer.lastModifiedDate | date:"dd/MM/yyyy - HH:mm:ss" }}</td>
                 <td class="text-center" [ngClass]="{
                       'text-green-300 font-semibold': customer.customerStatus === 'NEW',
