Arrumado card da carteira, melhorado a tela de login e sistema de refresh do token do usuario

--- a/src/app/layout/customer/wallet/wallet.component.html
+++ b/src/app/layout/customer/wallet/wallet.component.html
@@ -6,26 +6,53 @@
     </div>
     <div class="flex flex-row justify-content-between gap-3" style="height: 49rem;">
         <div
-            *ngFor="let status of [CustomerStatus.NEW, CustomerStatus.CONTACT, CustomerStatus.PRESENTATION, CustomerStatus.PROPOSAL, CustomerStatus.NEGOTIATION, CustomerStatus.CLOSURE]"
+            *ngFor="let status of [CustomerStatus.NEW, CustomerStatus.CONTACT, CustomerStatus.PRESENTATION, CustomerStatus.PROPOSAL, CustomerStatus.NEGOTIATION]"
             class="border-2 surface-border border-round w-20rem overflow-auto"
             pDroppable (onDrop)="drop(status)">
             <p class="text-center flex justify-content-between border-primary border-bottom-3 p-3 text-md surface-ground border-round sticky top-0">
                 {{ status }}
-                <p-badge [value]="getCustomersByStatus(status)?.length"/>
+                <p-badge [value]="getCustomersByStatus(status)?.length.toString()"/>
             </p>
             <ul class="flex flex-column gap-3 p-0 m-0" style="max-height: 36rem;">
                 <li *ngFor="let customer of getCustomersByStatus(status)"
-                    class="cursor-pointer text-wrap border-round surface-border mx-2 border-1 p-2 transition-colors surface-ground hover:bg-black-alpha-10 transition-duration-200"
+                    class="cursor-pointer text-wrap mx-2 p-2 transition-colors surface-ground hover:bg-black-alpha-10 transition-duration-200"
                     pDraggable
                     (onDragStart)="dragStart(customer)"
                     (onDragEnd)="dragEnd()"
-                    style="min-height: 10rem">
-                    @if (customer.cpfCnpj.length === 11) {
-                        <i class="pi pi-user m-2 text-xl"></i>
-                    } @else {
-                        <i class="pi pi-building m-2 text-xl"></i>
-                    }
-                    <span class="text-overflow-ellipsis w-full">{{ customer.name }}</span>
+                    style="
+                        min-height: 10rem;
+                        border-left: 0.4rem solid;
+                        border-radius: 0.5rem;
+                    "
+                    [ngClass]="{
+                        'border-blue-500': customer.customerStatus === CustomerStatus.NEW,
+                        'border-red-500': customer.customerStatus === CustomerStatus.CONTACT,
+                        'border-orange-500': customer.customerStatus === CustomerStatus.PRESENTATION,
+                        'border-yellow-500': customer.customerStatus === CustomerStatus.PROPOSAL,
+                        'border-green-500': customer.customerStatus === CustomerStatus.NEGOTIATION
+                    }">
+                    <div class="w-full p-2 font-bold text-lg">
+                        @if (customer.cpfCnpj.length === 11) {
+                            <i class="pi pi-user text-xl font-bold vertical-align-bottom"></i>
+                        } @else {
+                            <i class="pi pi-briefcase text-xl font-bold "></i>
+                        }
+                        <span class="text-overflow-ellipsis p-2">{{ customer.name.length > 19 ? customer.name.slice(0, 19) + '...' : customer.name }}</span>
+                    </div>
+                    <div class="w-full p-2 text-sm">
+                        <i class="pi pi-envelope vertical-align-bottom"></i>
+                        <span class="text-overflow-ellipsis p-2">{{ customer.email.length > 32 ? customer.email.slice(0, 32) + '...' : customer.email }}</span>
+                    </div>
+                    <div class="w-full p-2 text-sm">
+                        <i class="pi pi-phone vertical-align-bottom"></i>
+                        <span class="text-overflow-ellipsis p-2">{{ getCustomerPhoneNumber(customer.phoneNumbers[0]) }}</span>
+                    </div>
+                    <div class="w-full p-2 text-sm">
+                        <i class="pi pi-map-marker vertical-align-bottom"></i>
+                        <span class="text-overflow-ellipsis p-2">
+                            {{ getCustomerAddress(customer).length > 32 ? getCustomerAddress(customer).slice(0, 32) + '...' : getCustomerAddress(customer) }}
+                        </span>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -55,7 +82,7 @@
                     name="Categoria"
                     [appendTo]="'body'"
                     [options]="contactTypes"
-                    (onChange)="contact.info.contactType = $event.value.value"
+                    (onChange)="contact.info.contactType = $event.value.value; updateContactOptions()"
                     optionLabel="label"
                     placeholder="Selecione uma categoria"/>
             </div>
@@ -64,7 +91,15 @@
         <div class="col-12 lg:col-6">
             <div class="p-field">
                 <label for="contactAddress">Endereço de Contato</label>
-                <input id="contactAddress" type="text" pInputText [(ngModel)]="contact.info.value"/>
+                <p-dropdown
+                    id="contactAddress"
+                    name="Endereço de Contato"
+                    [appendTo]="'body'"
+                    [options]="contactOptions"
+                    optionLabel="label"
+                    (onChange)="contact.info.value = $event.value.value"
+                    [editable]="true">
+                </p-dropdown>
             </div>
         </div>
 
